--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -928,7 +928,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0q/k3qprn1d0fnb5hfyhc9pxr8w0000gp/T/ipykernel_17671/3997224342.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/0q/k3qprn1d0fnb5hfyhc9pxr8w0000gp/T/ipykernel_17771/3997224342.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"]= student_data_df[\"student_name\"].str.replace(word, \"\")\n"
      ]
     }
@@ -6645,7 +6645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 89,
    "id": "561ba94d",
    "metadata": {},
    "outputs": [],
@@ -6657,7 +6657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 90,
    "id": "ac235131",
    "metadata": {},
    "outputs": [
@@ -6807,7 +6807,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6820,7 +6820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 91,
    "id": "4bffe478",
    "metadata": {},
    "outputs": [],
@@ -6838,7 +6838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 92,
    "id": "0f077ee5",
    "metadata": {},
    "outputs": [
@@ -6921,7 +6921,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6939,8 +6939,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 99,
    "id": "e6f22c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown format code 'f' for object of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [99]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Formatting\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m size_summary_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage Math Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39m \u001b[43msize_summary_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAverage Math Score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{:.1f}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m size_summary_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage Reading Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39m size_summary_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage Reading Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{:.1f}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n\u001b[1;32m      4\u001b[0m size_summary_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m Passing Math\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39m size_summary_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m Passing Math\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{:.0f}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/series.py:4237\u001b[0m, in \u001b[0;36mSeries.map\u001b[0;34m(self, arg, na_action)\u001b[0m\n\u001b[1;32m   4162\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, arg, na_action\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Series:\n\u001b[1;32m   4163\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   4164\u001b[0m \u001b[38;5;124;03m    Map values of Series according to an input mapping or function.\u001b[39;00m\n\u001b[1;32m   4165\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4235\u001b[0m \u001b[38;5;124;03m    dtype: object\u001b[39;00m\n\u001b[1;32m   4236\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4237\u001b[0m     new_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_action\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mna_action\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4238\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_constructor(new_values, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex)\u001b[38;5;241m.\u001b[39m__finalize__(\n\u001b[1;32m   4239\u001b[0m         \u001b[38;5;28mself\u001b[39m, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmap\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   4240\u001b[0m     )\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/base.py:880\u001b[0m, in \u001b[0;36mIndexOpsMixin._map_values\u001b[0;34m(self, mapper, na_action)\u001b[0m\n\u001b[1;32m    877\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[1;32m    879\u001b[0m \u001b[38;5;66;03m# mapper is a function\u001b[39;00m\n\u001b[0;32m--> 880\u001b[0m new_values \u001b[38;5;241m=\u001b[39m \u001b[43mmap_f\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapper\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    882\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m new_values\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/lib.pyx:2870\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "#Formatting\n",
+    "size_summary_df[\"Average Math Score\"]= size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"Average Reading Score\"]= size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"% Passing Math\"]= size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Passing Reading\"]= size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Overall Passing\"]= size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "21bf78ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate averages for the desired column. \n",
+    "type_math_scores= per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading_scores= per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math= per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading= per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing= per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "28ed8943",
    "metadata": {},
    "outputs": [
     {
@@ -6971,7 +7022,7 @@
        "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>School Size</th>\n",
+       "      <th>School Type</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -6981,66 +7032,162 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Small (&lt;1000)</th>\n",
-       "      <td>83.8</td>\n",
-       "      <td>83.9</td>\n",
-       "      <td>94</td>\n",
-       "      <td>96</td>\n",
-       "      <td>90</td>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Medium (1000-1999)</th>\n",
-       "      <td>83.4</td>\n",
-       "      <td>83.9</td>\n",
-       "      <td>94</td>\n",
-       "      <td>97</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Large (2000-5000)</th>\n",
-       "      <td>77.7</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>83</td>\n",
-       "      <td>58</td>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
-       "School Size                                                                  \n",
-       "Small (<1000)                    83.8                  83.9             94   \n",
-       "Medium (1000-1999)               83.4                  83.9             94   \n",
-       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
        "\n",
-       "                   % Passing Reading % Overall Passing  \n",
-       "School Size                                             \n",
-       "Small (<1000)                     96                90  \n",
-       "Medium (1000-1999)                97                91  \n",
-       "Large (2000-5000)                 83                58  "
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Assemble into DataFrame.\n",
+    "type_summary_df= pd.DataFrame({\n",
+    "    \"Average Math Score\": type_math_scores,\n",
+    "    \"Average Reading Score\": type_reading_scores,\n",
+    "    \"% Passing Math\": type_passing_math,\n",
+    "    \"% Passing Reading\": type_passing_reading,\n",
+    "    \"% Overall Passing\": type_overall_passing})\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "7fbacce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "      <th>% Overall Reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90.432244</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>53.672208</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading  % Overall Passing % Overall Reading  \n",
+       "School Type                                                         \n",
+       "Charter                    97          90.432244                90  \n",
+       "District                   81          53.672208                54  "
+      ]
+     },
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Formatting\n",
-    "size_summary_df[\"Average Math Score\"]= size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
-    "size_summary_df[\"Average Reading Score\"]= size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
-    "size_summary_df[\"% Passing Math\"]= size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
-    "size_summary_df[\"% Passing Reading\"]= size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
-    "size_summary_df[\"% Overall Passing\"]= size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
-    "size_summary_df\n"
+    "type_summary_df[\"Average Math Score\"]=type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"Average Reading Score\"]=type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"% Passing Math\"]=type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Passing Reading\"]=type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Overall Reading\"]=type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21bf78ff",
+   "id": "f8cbc089",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d831a1",
    "metadata": {},
    "outputs": [],
    "source": []
